# WMM-Simulator

./: Cargo.toml  LICENSE  README.md
MicroMouse Mazes/: 2008japan  88jap
resources/: 2018apec  previous_mazes.json  test_4x4  test_5x5
src/: main.rs  maze.rs
src/auxillary/: convert_maze.py
src/maze/: mod.rs
