[package]
name = "wmm-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
bevy-inspector-egui = "0.21.0"
bevy_egui = "0.23.0"
bevy_flycam = "0.12.0"
serde = "1.0.193"
serde_json = "1.0.108"
